--- a/public/package.json
+++ b/public/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@glidejs/glide": "^3.5.2",
     "php": "^1.0.2",
     "postcss": "^8.3.6"
   },
