--- a/public/wp-content/themes/blackrock/.vscode/settings.json
+++ b/public/wp-content/themes/blackrock/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "window.commandCenter": true
+	"window.commandCenter": true,
+	"editor.tabSize": 2,
+	"editor.formatOnSave": true,
+	"html.format.indentInnerHtml": true,
+	"prettier.useTabs": true
 }
