--- a/public/wp-content/themes/blackrock/.vscode/settings.json
+++ b/public/wp-content/themes/blackrock/.vscode/settings.json
@@ -3,5 +3,6 @@
 	"editor.tabSize": 2,
 	"editor.formatOnSave": true,
 	"html.format.indentInnerHtml": true,
-	"prettier.useTabs": true
+	"prettier.useTabs": true,
+	"editor.detectIndentation": false
 }
